# Team8

./: README.md
src/ball_tracker/: CMakeLists.txt  README.md  package.xml  setup.py
src/ball_tracker/ball_tracker/: __init__.py  control_node.py  perception_node.py
src/ball_tracker/description/: robot.urdf.xacro
src/ball_tracker/launch/: launch_sim.launch.py  rsp.launch.py
src/ball_tracker/worlds/: ball_world.world
